--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "axios": "^0.27.2",
     "fs": "0.0.1-security",
-    "http": "0.0.1-security",
-    "uuid": "^8.3.2"
+    "http": "0.0.1-security"
   }
 }
